# arduino-uno-freertos

./: .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
cmake/: CPM.cmake  avr-toolchain.cmake
src/: FreeRTOSConfig.h  hooks.cpp  main.cpp
src/cli/: FreeRTOS_CLI.c  uart.cpp  uart.h
src/commands/: spawn.hpp
